--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ env:
     - CGO_ENABLED=1
   matrix:
     - TARGET_OS=linux
+    - TARGET_OS=windows EXT=.exe CC=x86_64-w64-mingw32-gcc
 before_deploy:
+  - sudo apt-get install -y gcc-mingw-w64-x86-64
   - export GOARCH=$TARGET_ARCH GOOS=$TARGET_OS
 deploy:
   provider: script
