--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,11 @@ env:
   matrix:
     - TARGET_OS=linux
     - TARGET_OS=windows EXT=.exe CC=x86_64-w64-mingw32-gcc
+addons:
+  apt:
+    packages:
+    - gcc-mingw-w64-x86-64
 before_deploy:
-  - '[ -n "$EXT" ] && sudo apt-get install -y binutils-mingw-w64-x86-64 gcc-mingw-w64-x86-64'
   - export GOARCH=$TARGET_ARCH GOOS=$TARGET_OS
 deploy:
   provider: script
