--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
     - CGO_ENABLED=1
   matrix:
     - TARGET_OS=linux
-    - TARGET_OS=windows EXT=.exe CC=x86_64-w64-mingw32-gcc
+    - TARGET_OS=windows EXT=.exe CC=x86_64-w64-mingw32-gcc GOGCCFLAGS=-Wall
 addons:
   apt:
     packages:
